--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+activityKtx = "1.7.2"
 agp = "8.5.1"
 kotlin = "1.9.0"
 coreKtx = "1.15.0"
@@ -19,6 +20,7 @@ tensorflowLiteMetadata = "0.4.4"
 tensorflowLiteTaskVision = "0.4.4"
 
 [libraries]
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
